# platform-context-graph

./: .cgcignore  .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  .pcgignore  ACKNOWLEDGMENTS.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  TESTING.md  buf.gen.yaml  docker-compose.neo4j.yml  docker-compose.nornicdb.yml  docker-compose.telemetry.yml  docker-compose.template.yml  docker-compose.yaml  incremental_refresh_compose_support.py  pcg.spec  pcg_entry.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/hooks/: pcg-doc-staleness.sh
.codex/: config.toml  hooks.json
.codex/hooks/: pcg-doc-staleness.sh
.codex/skills/: pcg-folder-doc-keeper
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy-root-docs.yml  docker-publish.yml  e2e-tests.yml  generate-bundle-on-demand.yml  (+3 more)
.planning/: PROJECT.md  config.json
.serena/: project.yml
deploy/: README.md
docs/: mkdocs.yml
go/: README.md  go.mod  go.sum
organizer/: CONTRIBUTING_LANGUAGES.md  Tools_Exploration.md  cookbook.md  docs.md  language_specific_nodes.md  troubleshoot.md
proto/: validate_contract_tree.sh
scripts/: README.md  __init__.py  api_node_boats_e2e_clone_support.py  api_node_boats_e2e_git_runtime.py  api_node_boats_e2e_http_contract.py  api_node_boats_e2e_manifest.py  api_node_boats_e2e_mutations.py  api_node_boats_e2e_workspace.py  backfill_content_metadata.py  backfill_content_metadata_support.py  backfill_repository_coverage.py  backfill_repository_coverage_support.py  benchmark_phase1b.sh  check-docs-stale.sh  check_python_docstrings.py  check_python_file_lengths.py  create-bundle.sh  generate_lang_contributors.py  generate_language_capability_docs.py  generate_templated_iac_fixtures.py  generate_templated_iac_fixtures_support.py  generate_terraform_provider_schema.sh  install-local-binaries.sh  local-integration-test.sh  monitor_local_authoritative_run.sh  package_terraform_schemas.sh  post_install_fix.sh  python_docstring_exemptions.txt  python_file_length_exemptions.txt  restore-ops-qa-backup.sh  restore-pcg-backup.sh  restore_pcg_backup.py  restore_pcg_backup_runtime.py  restore_pcg_backup_support.py  run_api_node_boats_e2e.py  seed_e2e_graph.py  shared_projection_tuning_report.py  shared_projection_tuning_report_support.py  sync_local_compose_mcp.sh  templated_repo_inventory.py  (+21 more)
specs/: README.md  backend-conformance.v1.yaml  capability-matrix.v1.yaml
terraform_providers/: .gitignore
tests/: conftest.py  run_tests.sh  test_sync_local_compose_mcp.sh
vscode-extension/: CHANGELOG.md  DEVELOPMENT.md  LICENSE  OVERVIEW.md  QUICKSTART.md  README.md  TESTING.md  TESTING_INSTRUCTIONS.md  TROUBLESHOOTING.md  package-lock.json  package.json
(+3496 files in other folders)
